--- a/miniprogram/pages/articleDetail/articleDetail.wxss
+++ b/miniprogram/pages/articleDetail/articleDetail.wxss
@@ -3,58 +3,45 @@ page {
 }
 
 /* 轮播 */
+.container swiper {
+  /* width: 100%; */
+  height: 35vh;
+  /* border: 1px rebeccapurple solid; */
+}
+
+/* image上view */
 .imgview{
-  width: 100%;
-  height: 100%;
-  position: relative;
+  /* width: 100%; */
+  /* height: 620px; */
+  /* position: relative; */
   margin: 2px auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 1px red solid; */
 }
-image{
-  background-color:#eeeeee;
-  display:block;
-  position: absolute;
-  top: 48%;
-  transform: translateY(-50%);
-  height: 50vh;
-}
-
-.container swiper {
-  width: 100%;
-}
-
-/* 文章内容 */
-.contentBox {
-  width: 98%;
-  padding: 8px 8px;
-  background-color: #fff;
-}
-
-.contentBox-row-title {
-  margin-top: 8px;
-  margin-bottom: 8px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-.contentBox textarea {
-  margin: 10px auto;
-  padding: 3px;
-  width: 95%;
-  font-size: 14px;
-  line-height:2em;  
-  border:solid 1px #81D8CF;
+.imgview image{
+  /* background-color:#eeeeee; */
+  /* display:block; */
+  /* position: absolute;
+  top: 48%; */
+  /* transform: translateY(-50%); */
+  /* border: 2px blue solid; */
+  /* height: 100vh; */
 }
 
 /* 用户头像昵称 */
 .user-box {
-  width: 980%;
+  width: 98%;
   height: 60px;
   margin-top: 8px;
   padding: 8px 8px;
   background-color: #fff;
   position: relative;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .user-box view {
@@ -74,6 +61,13 @@ image{
   margin: 5px;
   border-radius: 50%;
 }
+/* 昵称 */
+.nickName-box {
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .text-grey {
   color: rgba(0, 0, 0, 0.8);
@@ -81,6 +75,30 @@ image{
 
 .title-text-font-weight {
   font-weight: bold;
+}
+
+/* 文章内容 */
+.contentBox {
+  margin-top: 2px;
+  /* border: 1px solid blue; */
+  width: 98%;
+  padding: 8px 8px;
+  background-color: #fff;
+}
+
+.contentBox-row-title {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.contentBox textarea {
+  margin: 10px auto;
+  padding: 3px;
+  width: 95%;
+  font-size: 14px;
+  line-height:2em;  
+  /* border:solid 1px #81D8CF; */
 }
 
 
