--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,14 +1,14 @@
   <!-- 轮播图 -->
   <view class="banner">
     <swiper indicator-dots indicator-color="rgba(255,255,255,0.5)" indicator-active-color="#fff" circular autoplay interval="4000">
-        <swiper-item>
-            <image mode="widthFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/banner/left_banner.jpg?sign=ce47f3afeb8a2eaa1b766885c06d120c&t=1725242949" />
+        <swiper-item class="imageItem">
+              <image mode="heightFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/lovePic/1725785469843-2540836.jpg?sign=f9518485fca7c609e97d4cd3265edad9&t=1726376169" />
         </swiper-item>
-        <swiper-item>
-            <image mode="widthFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/banner/mid_banner.jpg?sign=4a2883473727de20328d423983324dcb&t=1725242969" />
+        <swiper-item class="imageItem">
+            <image mode="heightFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/banner/20240915134335.jpg?sign=b8616510a84cca653fefeae4afc617d3&t=1726379051" />
         </swiper-item>
-        <swiper-item>
-            <image mode="widthFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/banner/left_banner.jpg?sign=4006cddee40a74b568d437625b7489ac&t=1725242980" />
+        <swiper-item class="imageItem">
+            <image mode="heightFix" src="https://6c71-lq0504-3g69h7zi82b6f6b2-1329103136.tcb.qcloud.la/banner/20240915.jpg?sign=bfd18f6638d83ffa12fae261bbd1830b&t=1726379065" />
         </swiper-item>
     </swiper>
   </view>
@@ -59,7 +59,7 @@
   <view wx:elif="{{currentTab==2}}" class="plane_item">
     <scroll-view style="height: 450px; width: 100vw;" scroll-y>
     <view class="cu-card">
-        <view class="cu-item bg-img shadow-blur cardDynamic" style="background-image: linear-gradient({{item.bg_color}});"  wx:for="{{tasks}}" wx:key="index" >
+        <view class="cu-item bg-img shadow-blur" style="background-image: linear-gradient({{item.bg_color}});"  wx:for="{{tasks}}" wx:key="index" >
         <view class="taskDesc">
           {{item.taskDesc}} | {{item.taskReward}} 币
         </view>
