--- a/miniprogram/pages/publish/publish.wxml
+++ b/miniprogram/pages/publish/publish.wxml
@@ -1,14 +1,16 @@
-<view class="container">
+<view class="container flexBetween">
   <navigator url="../publishArticle/publishArticle" hover-class="none" >
-    <view class="publish" style="background: linear-gradient(-90deg, #29bdd9 0%, #276ace 100%);" ><text>发布文章</text></view>
+    <view class="item" style="background: linear-gradient(-90deg, #29bdd9 0%, #276ace 100%);" ><text>发布文章</text></view>
   </navigator>
   <navigator url="../publishTask/publishTask" hover-class="none" >
-    <view class="publish" style="background: linear-gradient(to right, #ff9569 0%, #e92758 100%);" ><text>发布悬赏</text></view>
+    <view class="item" style="background: linear-gradient(to right, #ff9569 0%, #e92758 100%);" ><text>发布悬赏</text></view>
   </navigator>
+</view>
+<view class="container flexBetween">
   <navigator url="../publishCard/publishCard" hover-class="none" >
-    <view class="publish" style="background: linear-gradient(to left, #ac1292 0%, #caeb10 100%);" ><text>生成卡片</text></view>
+    <view class="item" style="background: linear-gradient(to left, #ac1292 0%, #caeb10 100%);" ><text>生成卡片</text></view>
   </navigator>
   <navigator url="../publishDay/publishDay" hover-class="none" >
-    <view class="publish" style="background: linear-gradient(to left, #1221ac 0%, #10eb97 100%);" ><text>添加纪念日</text></view>
+    <view class="item" style="background: linear-gradient(to left, #1221ac 0%, #10eb97 100%);" ><text>添加纪念日</text></view>
   </navigator>
 </view>
